--- a/src/components/assortment/assortment.css
+++ b/src/components/assortment/assortment.css
@@ -71,16 +71,41 @@
 }
 
 button {
-    display: flex;
-    width: 130px;
+    width: 150px;
     height: 40px;
-    padding: 8px 0px;
-    justify-content: center;
     align-items: center;
     flex-shrink: 0;
 
     border-radius: 15px;
-    border: 1px solid #000;
     background: #FFF;
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+
+    display: inline;
+    margin-top: 20px;
+    margin-right: 10px;
+    text-decoration: none;
+    padding: 8px 10px 8px 15px;
+    justify-content: flex-end;
+    align-items: center;
+    gap: 83px;
+
+
+
+    border: none;
+
+    /*    removes the arrow*/
+    /*    -webkit-appearance: none;*/
+    /*    -moz-appearance: none;*/
+    /*    appearance: none;*/
+
+    color: #000;  /* Text color */
+    font-family: 'Kanit', sans-serif; /* Font family */
+    font-size: 12px; /* Font size */
+    font-style: normal;
+    font-weight: 275;
+    line-height: 150%;
+}
+
+.Sortbutton {
+    width: 90px;
 }
