--- a/src/components/base/base.css
+++ b/src/components/base/base.css
@@ -32,7 +32,7 @@
 
 .search-bar input {
     width: 100%;
-    height: 40px;
+    height: 25px;
     padding: 7px 15px;
     color: black;
     font-size: 12px;
@@ -48,6 +48,7 @@
 }
 
 .becomeAHost {
+    margin-top: 0;
     display: inline-flex;
     margin-left: 25%;
     width: 10%;
@@ -64,6 +65,7 @@
 }
 
 .nineDots {
+    margin-top: 0;
     margin-left: 1%;
     box-sizing: content-box;
     padding: 8px 0;
@@ -80,6 +82,7 @@
 }
 
 .personalMenu {
+    margin-top: 0;
     margin-left: 1%;
     width: 5%;
     height: 100%;
