Removed login modal changed it to navigate to /login

--- a/src/components/base/Login.css
+++ b/src/components/base/Login.css
@@ -54,6 +54,7 @@
     padding: 30px;
     background: #EBFAED;
     border-radius: 15px;
+    margin-bottom: 50px;
     box-sizing: border-box;
 }
 
