--- a/src/components/landingpage/landing.css
+++ b/src/components/landingpage/landing.css
@@ -68,20 +68,13 @@
     color: #fff;
 }
 
-.selectedCard {
-    border: 3px solid navy;
-    border-radius: 10px;
-    box-shadow: none;
-    margin: -3px;
-}
-
 .cardHolder {
     display: flex;
     flex-direction: row;
     justify-content: space-around;
     flex-wrap: wrap;
     margin-top: 30px;
-    margin-bottom: 30px; 
+    margin-bottom: 30px;
 }
 
 .card {
@@ -89,14 +82,16 @@
     width: 135px;
     max-height: 135px;
     max-width: 135px;
+    margin-bottom: 30px;
 }
 
-.card:hover {
+.card:hover, .selectedCard {
     border: 3px solid navy;
     border-radius: 10px;
     box-shadow: none;
     cursor: pointer;
     margin: -3px;
+    margin-bottom: 27px;
 }
 
 .cardImage {
@@ -104,8 +99,21 @@
     max-width: 100px;
     width: 100%;
     height: 100%;
-    max-height: 100px; 
+    max-height: 100px;
     object-fit: contain;
+}
+
+.priceDisplay {
+    max-width: 35%;
+    padding: 10px;
+    border-radius: 10px;
+
+    border: 1px solid navy;
+    box-shadow: 1px 1px 5px 1px navy;
+
+    margin: auto;
+    margin-top: 30px;
+    margin-bottom: 30px;
 }
 
 .infoCard {
@@ -113,3 +121,63 @@
     max-height: 230px;
     margin: 15px;
 }
+
+
+.infoHolder {
+    margin-top: 30px;
+    margin-bottom: 30px;
+}
+
+.info {
+    font-size: 1.2rem;
+    margin: 8px 0;
+    color: #333;
+}
+
+.infoHeader {
+    color: green;
+    font-size: 1.5rem;
+    margin-bottom: 10px;
+}
+
+
+
+
+
+.faq-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  
+  .faq-box {
+    width: 80%;
+    border: 2px solid navy;
+    border-radius: 10px;
+    margin: 10px;
+    padding: 15px;
+    cursor: pointer;
+    max-height: 60px; 
+    overflow: hidden;
+    transition: max-height 2s ease; 
+  }
+  
+  .faq-box:hover {
+    max-height: 200px; 
+  }
+  
+  .question {
+    font-weight: bold;
+    margin-bottom: 8px;
+  }
+  
+  .answer {
+    max-height: 0;
+    overflow: hidden;
+    transition: max-height 2s ease; 
+  }
+  
+  .faq-box:hover .answer {
+    max-height: 200px; 
+  }
+  
