--- a/web/src/components/landingpage/landing.css
+++ b/web/src/components/landingpage/landing.css
@@ -100,7 +100,7 @@
     width: 100%;
     height: 100%;
     max-height: 100px;
-    object-fit: contain;
+    object-fit: cover;
 }
 
 .priceDisplay {
