--- a/web/src/components/landingpage/landing.css
+++ b/web/src/components/landingpage/landing.css
@@ -116,6 +116,9 @@
     margin-bottom: 30px;
 }
 
+.proHosting {
+    margin-top: 50px;
+}
 .infoCard {
     max-width: 200px;
     max-height: 230px;
@@ -144,6 +147,8 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    margin-top: 50px;
+    margin-bottom: 50px;
   }
   
   .faq-box {
