--- a/web/src/components/base/base.css
+++ b/web/src/components/base/base.css
@@ -26,7 +26,7 @@
     text-align: center;
     padding: 12px;
     font-size: 18px;
-    border-radius: 4px;
+    border-radius: 15px;
     margin-top: 0;
     display: inline-flex;
     border: 1px black solid;
@@ -83,6 +83,7 @@
         justify-content: center;
         width: 100%;
     }
+
     .headerButtons, .personalMenu{
         width: 100%;
         margin-top: 10px;
@@ -93,6 +94,7 @@
 
     .search-bar {
         width: 100%;
+        margin-top: 10px;
     }
 
 }
