--- a/web/src/components/base/base.css
+++ b/web/src/components/base/base.css
@@ -1,12 +1,8 @@
 /* CSS for the header */
 .app-header {
-    display: flex;
-    width: 100%;
-    padding: 16px 0px;
-    align-items: center;
-    justify-content: space-between;
-    text-align: center;
-    box-shadow: 0 2px 6px 0 rgba(13, 26, 38, 0.15);
+    box-shadow: 0 2px 6px 0 #0d1a2626;
+  padding: 16px 50px;
+  text-align: center;
 }
 
 .header-nav{
