--- a/web/src/components/base/base.css
+++ b/web/src/components/base/base.css
@@ -26,13 +26,13 @@
     text-align: center;
     padding: 12px;
     font-size: 18px;
-    border-radius: 15px;
+    border-radius: 10px;
     margin-top: 0;
     display: inline-flex;
-    border: 1px black solid;
     font-family: Kanit, sans-serif;
     cursor: pointer;
     width: auto;
+    box-shadow: 0 0 5px hsl(0 0% 78%);
 }
 
 .personalMenu {
@@ -53,28 +53,6 @@
 }
 
 /* CSS for the SearchBar */
-.search-bar {
-    display: flex;
-    width: 35%;
-    min-width: 140px;
-}
-
-.search-bar input {
-    width: 100%;
-    height: 25px;
-    padding: 7px 15px;
-    color: black;
-    font-size: 12px;
-    font-family: Kanit, sans-serif;
-    font-weight: 275;
-    line-height: 18px;
-    align-items: center;
-    border: 1px solid black;
-    border-radius: 15px;
-    background: #FFF;
-    flex-shrink: 1;
-    overflow: unset;
-}
 
 @media screen and (max-width: 650px) {
 
@@ -90,11 +68,6 @@
         margin-right: 0px;
         justify-content: center;
         float: none;
-    }
-
-    .search-bar {
-        width: 100%;
-        margin-top: 10px;
     }
 
 }
@@ -251,6 +224,21 @@ a:hover {
     }
     
 }
+.search-bar-container {
+    /* padding-top: 20vh; */
+    width: 40%;
+    padding: 1px;
+    margin: auto;
+    display: flex;
+    flex-direction: column;
+    position: absolute;
+    top: 10px; /* Pas de gewenste bovenste positie aan */
+    left: 40%; /* Plaats in het midden of pas aan zoals gewenst */
+    transform: translateX(-50%);
+  }
+  
+  
+  
 
 
 /* End of footer */
