--- a/web/src/index.css
+++ b/web/src/index.css
@@ -1,3 +1,10 @@
+@font-face {
+  font-family: "Kanit";
+  src: local("KanitRegular"),
+   url("./fonts/kanit/Kanit-Regular.ttf") format("truetype");
+  font-weight: bold;
+ }
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
