--- a/web/src/components/hostdashboard/HostHomepage.css
+++ b/web/src/components/hostdashboard/HostHomepage.css
@@ -16,6 +16,10 @@
     justify-content: space-between;
   
   }
+  .wijzer:hover {
+    cursor: pointer;
+    transform: translateY(-2px);
+  }
   
   .dashboard {
     display: grid;
