--- a/web/src/App.css
+++ b/web/src/App.css
@@ -76,6 +76,10 @@ ul {
   margin: 0;
 }
 
+p {
+  margin: 0;
+}
+
 li a {
   color: var(--colors-font-interactive, #0A760F);
   text-decoration: none;
