--- a/web/src/components/base/SearchResultsList.css
+++ b/web/src/components/base/SearchResultsList.css
@@ -5,7 +5,7 @@
     flex-direction: column;
     box-shadow: 0px 0px 8px #ddd;
     border-radius: 10px;
-    margin: 1rem;
+    margin-top: 4rem;
     max-height: 300px;
     overflow-y: scroll;
 
