--- a/web/src/components/contact/contact.css
+++ b/web/src/components/contact/contact.css
@@ -30,7 +30,8 @@
   
   @media screen and (max-width: 768px) {
     .namemessage,
-    .biginput {
+    .biginput,
+    .formbuttons {
       flex: 100%; /* Full width when screen size is smaller */
       margin-right: 0; /* Remove margin between sections */
     }
@@ -59,21 +60,18 @@
   .formbuttons {
     border: 0px;
     display: flex;
-    flex-direction: row;
-    justify-content: flex-end;
+    justify-content: flex-start;
   }
   
   #attachmentsbutton,
   #sendbutton {
-    width: 400px;
+    width: 50%;
     height: 50px;
     padding: 8px 15px;
-    justify-content: center;
-    align-items: center;
     gap: 15px;
     flex-shrink: 0;
     color: #FFF;
-    margin: 30px;
+    /* margin: 30px; */
     border-radius: 15px;
   }
   
