--- a/web/src/components/contact/contact.css
+++ b/web/src/components/contact/contact.css
@@ -15,7 +15,7 @@
     background: #EBFAED;
     padding: 50px;
     display: flex;
-    flex-wrap: wrap; /* Allow flex items to wrap */
+    flex-wrap: wrap;
   }
   
   .contactform h2 {
@@ -24,24 +24,23 @@
   
   .namemessage,
   .biginput {
-    flex: 1; /* Equal width for both sections */
-    margin-right: 20px; /* Add margin between sections */
+    flex: 1;
+    margin-right: 20px;
   }
   
   @media screen and (max-width: 768px) {
     .namemessage,
     .biginput,
     .formbuttons {
-      flex: 100%; /* Full width when screen size is smaller */
-      margin-right: 0; /* Remove margin between sections */
+      flex: 100%;
+      margin-right: 0;
     }
   }
   
   .biginput textarea {
-    display: block;
-    width: 100%; /* Full width textarea */
+    width: 100%;
     height: 272px;
-    resize: vertical;
+    box-sizing: border-box;
     text-align: left;
     padding: 10px;
     border: 1px solid #000;
@@ -52,8 +51,9 @@
   .contactform input:not(.biginput input) {
     border-radius: 15px;
     border: 1px solid #000;
+    background: #FFF;
     padding: 10px;
-    width: 100%; /* Full width input */
+    width: 100%;
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
   }
   
@@ -71,7 +71,6 @@
     gap: 15px;
     flex-shrink: 0;
     color: #FFF;
-    /* margin: 30px; */
     border-radius: 15px;
   }
   
