--- a/web/src/components/base/Login.css
+++ b/web/src/components/base/Login.css
@@ -3,14 +3,15 @@
     width: auto;
     display: flex;
     justify-content: center;
-    gap: 5px;
+    gap: 20px;
+    margin-top: 10px;
 }
 
 .lbText {
-    width: auto;
+    width: 20px;
     display: flex;
+    align-items: center; /* Verticale uitlijning in het midden */
     justify-content: center;
-    gap: 5px;
     color: white;
 }
 
@@ -24,16 +25,18 @@
     border: 0;
     color: white;
     font-size: 18px;
-    display: block;
-    text-align: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     cursor: pointer;
+    
 }
 
 .registerButtonLogin {
     width: auto;
     min-width: 100%;
     padding: 8px 15px;
-    background: #49146A;
+    background: #003366;
     box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
     border-radius: 15px;
     border: 0;
